--- a/app/src/main/res/layout/activity_login2.xml
+++ b/app/src/main/res/layout/activity_login2.xml
@@ -18,16 +18,18 @@
     android:gravity="center_horizontal"
     android:layout_marginTop="40dp"
     android:layout_marginBottom="50dp"/>
+
     <EditText
+        android:id="@+id/username1"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:id="@+id/username1"
-        android:hint="Username"
-        android:textSize="25dp"
-        android:textColorHint="@color/black"
-        android:background="@drawable/edittextbackground"
         android:layout_marginBottom="30dp"
-        android:paddingLeft="20dp"/>
+        android:background="@drawable/edittextbackground"
+        android:hint="Username"
+        android:paddingLeft="20dp"
+        android:textColorHint="@color/black"
+        android:textSize="25dp" />
+
     <EditText
         android:layout_width="match_parent"
         android:layout_height="50dp"
@@ -39,14 +41,14 @@
         android:background="@drawable/edittextbackground"
         android:layout_marginBottom="30dp"
         android:paddingLeft="20dp"/>
-      <Button
+
+    <Button
+        android:id="@+id/signin1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/signin1"
+        android:layout_marginBottom="30dp"
         android:text="sign in"
-        android:textSize="20dp"
-        android:layout_marginBottom="30dp"/>
-
+        android:textSize="20dp" />
 
 
 </LinearLayout>
